Processing of OpenShift Templates with apiVersion = v1 no longer works in kubernetes-client 4.4.0 Adding a default URL for source Fixing typo

--- a/pom.xml
+++ b/pom.xml
@@ -29,20 +29,20 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>Wildlfy Booster - ConfigMap Mission</name>
+    <name>WildFly Booster - ConfigMap Mission</name>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <version.javax.json>1.0.4</version.javax.json>
-        <version.server.bom>16.0.0.Final</version.server.bom>
+        <version.server.bom>20.0.1.Final</version.server.bom>
     </properties>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.wildfly.bom</groupId>
-                <artifactId>wildfly-javaee8-with-tools</artifactId>
+                <artifactId>wildfly-jakartaee8-with-tools</artifactId>
                 <version>${version.server.bom}</version>
                 <type>pom</type>
                 <scope>import</scope>
@@ -52,8 +52,8 @@
 
     <dependencies> 
         <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <!-- Import the Servlet API, we use provided scope as the API is
