--- a/.openshiftio/application.yml
+++ b/.openshiftio/application.yml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   name: wildfly-configmap-booster
@@ -9,6 +9,7 @@ parameters:
 - name: SOURCE_REPOSITORY_URL
   description: The source URL for the application
   displayName: Source URL
+  value: https://github.com/wildfly-booster-for-openshift/wildfly-configmap.git
   required: true
 - name: SOURCE_REPOSITORY_REF
   description: The branch name for the application
@@ -51,7 +52,7 @@ objects:
     - name: latest
       from:
         kind: DockerImage
-        name: openshift/wildfly-160-centos7:latest
+        name: quay.io/wildfly/wildfly-centos7:latest
 
 - apiVersion: v1
   kind: BuildConfig
@@ -82,6 +83,10 @@ objects:
           value: "-pl ${SOURCE_REPOSITORY_DIR}"
         - name: ARTIFACT_DIR
           value: "${ARTIFACT_DIR}"
+        - name: MICROPROFILE_CONFIG_DIR
+          value: "/app/config"
+        - name: MICROPROFILE_CONFIG_DIR_ORDINAL
+          value: "500"
       type: Source
     triggers:
     - github:
